Minor update? currently installed on Bravo

--- a/auto/config
+++ b/auto/config
@@ -8,8 +8,8 @@ lb config noauto \
     --packages "openssh-server iceweasel gimp inkscape mtpaint abiword \
                 epdfview ntpdate firmware-b43-installer vlc zim xchat \
                 wpasupplicant wicd pianobar audacity flashplugin-nonfree \
-                calcoo gpicview geomview geda alsa-firmware-loaders\
-                ace-of-penguins synaptic moc xboard phalanx qgo gnugo less
+                qalculate-gtk gpicview geomview geda alsa-firmware-loaders\
+                ace-of-penguins synaptic moc xboard phalanx qgo gnugo less \
                 wodim w3m rednotebook linux-wlan-ng atmel-firmware firmware-atheros \
                 firmware-brcm80211 firmware-ralink firmware-realtek \
                 libertas-firmware zd1211-firmware" \
